[tool.poetry]
name = "gym-cartpole-swingup"
version = "0.1.1"
description = "A simple, continuous-control environment for OpenAI Gym"
authors = ["Ângelo Gregório Lovatto <angelolovatto@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://github.com/angelolovatto/gym-cartpole-swingup"
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.7"
poetry-version = "^0.1.5"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
tox = "^3.22.0"
mypy = "^0.812"
torch = "^1.5.0"
pylint = "^2.6.2"
black = "^20.8b1"
ipython = "^7.21.0"
pre-commit = "^2.10.1"
flake8 = "^3.8.2"
pip = "^20.1.1"
bump2version = "^1.0.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
