[tool.poetry]
name = "gym-cartpole-swingup"
version = "0.1.3"
description = "A simple, continuous-control environment for OpenAI Gym"
authors = ["Ângelo Gregório Lovatto <angelolovatto@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://github.com/angelolovatto/gym-cartpole-swingup"
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.7"
poetry-version = "^0.1.5"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
mypy = "^0.812"
torch = "^1.8.1"
pylint = "^2.6.2"
black = "^21.4b1"
ipython = "^7.22.0"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
pip = "^20.1.1"
bump2version = "^1.0.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
