[tool.poetry]
name = "gym-cartpole-swingup"
version = "0.1.4"
description = "A simple, continuous-control environment for OpenAI Gym"
authors = ["Ângelo Gregório Lovatto <angelolovatto@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://github.com/angelolovatto/gym-cartpole-swingup"
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.7"
poetry-version = "^0.1.5"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
mypy = "^0.910"
torch = "^1.9.0"
pylint = "^2.6.2"
black = "^21.9b0"
ipython = "^7.24.1"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
pip = "^20.1.1"
bump2version = "^1.0.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
